    New internal commands:
        hide/show: hide and show the console on Windows
        sc-script: Allows additional scripts to be run when certain events occur (similar to onLoad*.init scripts)
    Fixes
        Made PRELOAD_LIB more extensible on Linux
        add-spatter/eventful: Fixed crash on world load
        Gave add-thought a proper subthought arg.
        fix-armory compiles and is available again (albeit with issues)
        gui/gm-editor: Added search option (accessible with "s")
        hack-wish: Made items stack properly.
        modtools/skill-change: made level granularity work properly.
        show-unit-syndromes should work
        zone: Stopped crash when scrolling cage owner list
    New Plugins
    New Scripts
        modtools/reaction-product-trigger: triggers callbacks when products are produced (contrast with when reactions complete)
    New Tweaks
        tradereq-pet-gender: Displays pet genders on the trade request screen
    Removed
    Misc Improvements
        catsplosion: Can now trigger pregnancies in (most) other creatures
        exportlegends: 'info' and 'all' exports legends_plus xml with more data for legends utilities
        remotefortressreader: Exposes more information

DFHack 0.40.24-r2
    Internals
        Lua scripts can set environment variables of each other with dfhack.run_script_with_env.
        Lua scripts can now call each others internal nonlocal functions with dfhack.script_environment(scriptName).functionName(arg1,arg2).
        eventful Lua reactions no longer require LUA_HOOK as a prefix: you can register a callback for the completion of any reaction with a name
        Filesystem module now provides file access/modification times and can list directories (normally and recursively)
        Units Module: New functions:
            isWar
            isHunter
            isAvailableForAdoption
            isOwnCiv
            isOwnRace
            getRaceName
            getRaceNamePlural